--- a/package.json
+++ b/package.json
@@ -9,18 +9,47 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@bull-board/api": "^6.6.2",
+    "@bull-board/express": "^6.6.2",
+    "@bull-board/ui": "^6.6.2",
+    "@faker-js/faker": "^9.4.0",
+    "@hookform/resolvers": "^3.10.0",
+    "@prisma/client": "^6.2.1",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
+    "axios": "^1.7.9",
+    "bull": "^4.16.5",
+    "chance": "^1.1.12",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "dummy-json": "^3.0.5",
+    "express": "^4.21.2",
+    "faker": "^6.6.6",
+    "ioredis": "^5.4.2",
+    "lucide-react": "^0.471.1",
+    "next": "14.2.23",
+    "prisma": "^6.2.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.23"
+    "react-hook-form": "^7.54.2",
+    "react-query": "^3.39.3",
+    "sonner": "^1.7.2",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
+    "@types/bcrypt": "^5.0.2",
+    "@types/chance": "^1.1.6",
+    "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/node": "^20.17.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.23",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.23"
+    "typescript": "^5.7.3"
   }
 }
