--- a/package.json
+++ b/package.json
@@ -17,17 +17,24 @@
     "@prisma/client": "^6.2.1",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@tanstack/react-query": "^5.64.1",
+    "@tanstack/react-query-devtools": "^5.64.1",
     "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
     "bull": "^4.16.5",
     "chance": "^1.1.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "dummy-json": "^3.0.5",
     "express": "^4.21.2",
     "faker": "^6.6.6",
     "ioredis": "^5.4.2",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.471.1",
     "next": "14.2.23",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.10",
     "prisma": "^6.2.1",
     "react": "^18",
     "react-dom": "^18",
