--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "^6.2.1",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-progress": "^1.1.1",
+    "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.2",
     "@tanstack/react-query": "^5.64.1",
     "@tanstack/react-query-devtools": "^5.64.1",
     "axios": "^1.7.9",
@@ -29,6 +32,7 @@
     "dummy-json": "^3.0.5",
     "express": "^4.21.2",
     "faker": "^6.6.6",
+    "framer-motion": "^11.18.0",
     "ioredis": "^5.4.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.471.1",
