completely refined some aspects of the app except the auth

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@
 
 DATABASE_URL="postgres://postgres:Segun@19@localhost:5432/football-transfer"
 JWT_SECRET="football-transfer-secret"
+NEXT_PUBLIC_GIPHY_API_KEY="Lighg4uIbZkTXM1P59wKPePFHo4gmwGX"
