--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "faker": "^6.6.6",
     "framer-motion": "^11.18.0",
     "ioredis": "^5.4.2",
+    "isomorphic-unfetch": "^4.0.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.471.1",
     "next": "14.2.23",
